syntax = "proto3";

package login_server.v1;

import "google/api/annotations.proto";

option go_package = "login_server/api/login_server/v1;v1";
option java_multiple_files = true;
option java_package = "dev.kratos.api.login_server.v1";
option java_outer_classname = "LoginServerProtoV1";

// The login_server service definition.
service LoginServer {
  rpc SayHello (HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      get: "/helloworld/{name}"
    };
  }
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
